--- a/app/submitnow.html
+++ b/app/submitnow.html
@@ -11,7 +11,7 @@
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-About</title>
+		<title>Global Health Film Festival</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
@@ -20,13 +20,13 @@
 	<div class="row">
 		<div class="twelve columns">
 			<div id="social-icons">
-					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">
 							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
 					</a>
 					<a href="https://twitter.com/therighttoheal" target="_blank">
 							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
 					</a>
-					<a href="http://instagram.com/michandrea" target="_blank">
+					<a href="http://instagram.com/therighttoheal" target="_blank">
 							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
 					</a>
 			</div>
@@ -70,7 +70,7 @@
 					<div class="twelve columns">
 						<ul class="nav sub-nav">
 							<li class="nav-item">
-								<a href="guidelines.html">Guidelines</a>
+								<a href="submit.html">Guidelines</a>
 							</li>
 							<li class="nav-item active">
 								<a href="submitnow.html">Submit Now</a>
@@ -82,7 +82,7 @@
 					<div class="twelve columns">
 						<h4>Submission Instructions</h4>
 						<p class="small">
-							Submissions will be open through May 10, 2013. No films will be accepted after May 10, 2013. All submissions must come through our online form here (hyperlink) or see the link below.
+							Submissions will be open through May 10, 2013. No films will be accepted after May 10, 2013. All submissions must come through our online form (see 'Submit Now' below).
 						</p>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 					<div class="twelve columns">
 						<p class="strong half">Submission Materials</p>
 						<p class="small">
-							We highly encourage you to submit the film and ALL materials online. We will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
+							We highly encourage you to submit the film and ALL materials online. We will not download film files: all online entries must be hosted by the filmmaker or a third party (ie Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
 						</p>
 						<p class="strong half pad">Shipping Information</p>
 						<p class="small">
@@ -115,7 +115,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="twelve columns link">
+					<div class="twelve columns link vert-pad">
 						<p class="submit-now"><a href="https://docs.google.com/forms/d/1w_fS7pr-sz5I2Le8Ix__pw6KHFYi3fEaDQEsqO-0uhI/viewform" target="_blank">Submit Now</a></p>
 					</div>
 				</div>
@@ -135,11 +135,51 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="footer row">
-			<div class="twelve columns">
-				<div class="content">This is some footer content</div>
-			</div>
+		<div class="four columns">
+			<p class="strong">Locate Us:</p>
+			<p>
+				IGOT Global Health Film Festival
+				<br>	
+				2550 23rd Street
+				<br>	
+				Building 9, 2nd Floor
+				<br>	
+				San Francisco, CA 94110
+			</p>
 		</div>
+		<div class="four columns">
+			<p class="strong">Show the love:</p>
+			<p>info@globalhealth.com</p>
+			<p>
+				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
+			</p>
+			<p>
+				<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
+			</p>
+			<p>
+				<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
+			</p>
+			<p>
+				<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
+			</p>
+
+		</div>
+		<div class="four columns">
+			<p class="strong">Social Streams:</p>
+			<p>
+				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
+			</p>
+			<p>
+				<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
+			</p>
+			<p>
+				<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
+			</p>
+		</div>
+	</div>
+
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
