--- a/app/schedule.html
+++ b/app/schedule.html
@@ -12,7 +12,7 @@
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF</title>
+		<title>Global Health Film Festival</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
@@ -21,13 +21,13 @@
 	<div class="row">
 		<div class="twelve columns">
 			<div id="social-icons">
-					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">
 							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
 					</a>
 					<a href="https://twitter.com/therighttoheal" target="_blank">
 							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
 					</a>
-					<a href="http://instagram.com/michandrea" target="_blank">
+					<a href="http://instagram.com/therighttoheal" target="_blank">
 							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
 					</a>
 			</div>
@@ -67,21 +67,24 @@
 		<div class="body row">
 			<div class="twelve columns content-container">
 				<div class="row">
-					<div class="twelve columns">
+					<div class="twelve columns schedule">
 						<div>
-							<h5>Saturday July 6, 2013</h5>
-							<h5>Location TBD</h5>
-							<h5>
-								7pm-10pm film premier and Q+A, followed by a live performance from XX (hyperlink)
-							</h5>
-							<h5>RSVP on Facebook here!</h5>
+							<p class="schedule">Saturday July 6, 2013</p>
+							<p class="schedule">Location TBD</p>
+							<p class="schedule">
+								7pm-10pm film premier and Q+A, followed by a live performance from<a href="put band in here"> XX</a>
+							</p>
+							<p class="schedule">
+								<a href="https://www.facebook.com/events/458415670892007/" target="_blank">
+									RSVP on Facebook here</a>
+							</p>
 						</div>
 					</div>
 				</div>
 				<div class="pad">
 				</div>
 				<div class="row">
-				<div class="twelve columns">
+				<div class="twelve columns top-pad">
 					<h4>Feature Film</h4>
 				</div>
 				</div>
@@ -98,7 +101,7 @@
 				<div class="pad">
 				</div>
 				<div class="row">
-				<div class="twelve columns">
+				<div class="twelve columns top-pad">
 					<h5>Short Films</h5>
 				</div>
 				</div>
@@ -149,7 +152,7 @@
 				<div class="pad">
 				</div>
 				<div class="row">
-					<div class="twelve columns">
+					<div class="twelve columns top-pad">
 						<h5>Panel of Experts</h5>
 					</div>
 				</div>
@@ -205,10 +208,50 @@
 		</div>
 
 		<div class="footer row">
-			<div class="twelve columns">
-				<div class="content">This is some footer content</div>
-			</div>
+		<div class="four columns">
+			<p class="strong">Locate Us:</p>
+			<p>
+				IGOT Global Health Film Festival
+				<br>	
+				2550 23rd Street
+				<br>	
+				Building 9, 2nd Floor
+				<br>	
+				San Francisco, CA 94110
+			</p>
 		</div>
+		<div class="four columns">
+			<p class="strong">Show the love:</p>
+			<p>info@globalhealth.com</p>
+			<p>
+				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
+			</p>
+			<p>
+				<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
+			</p>
+			<p>
+				<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
+			</p>
+			<p>
+				<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
+			</p>
+
+		</div>
+		<div class="four columns">
+			<p class="strong">Social Streams:</p>
+			<p>
+				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
+			</p>
+			<p>
+				<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
+			</p>
+			<p>
+				<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
+			</p>
+		</div>
+	</div>
+		
+
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
