--- a/app/submit.html
+++ b/app/submit.html
@@ -11,27 +11,27 @@
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-About</title>
+		<title>Global Health Film Festival</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-	<div class="row">
-		<div class="twelve columns">
-			<div id="social-icons">
-					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
-							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+		<div class="row">
+			<div class="twelve columns">
+				<div id="social-icons">
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">
+						<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
 					</a>
 					<a href="https://twitter.com/therighttoheal" target="_blank">
-							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+						<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
 					</a>
-					<a href="http://instagram.com/michandrea" target="_blank">
-							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+					<a href="http://instagram.com/therighttoheal" target="_blank">
+						<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
 					</a>
+				</div>
 			</div>
 		</div>
-	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
@@ -43,8 +43,7 @@
 		<div class="header row">
 			<div class="five columns">
 				<div class="logo-container">
-					<img src="images/ghff_logo_black.png">
-				</div>
+					<img src="images/ghff_logo_black.png"></div>
 			</div>
 			<div class="seven columns">
 				<ul class="main-nav nav">
@@ -69,8 +68,8 @@
 				<div class="row">
 					<div class="twelve columns">
 						<ul class="nav sub-nav">
-							<li class="nav-item">
-								<a href="guidelines.html">Guidelines</a>
+							<li class="nav-item active">
+								<a href="submit.html">Guidelines</a>
 							</li>
 							<li class="nav-item">
 								<a href="submitnow.html">Submit Now</a>
@@ -79,20 +78,94 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="twelve columns">
+					<div class="twelve columns half">
+						<h4>Guidelines for Submission</h4>
+						<div class="small strong">
+							<p>Festival Date: July 6, 2013</p>
+						</div>
+						<div class="small strong">
+							<p>Deadline for Submission: May 10, 2013</p>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="footer row">
-			<div class="twelve columns">
-				<div class="content">This is some footer content
+				<div class="row vert-pad">
+					<div class="seven columns half">
+						<p class="strong half">
+							We are looking for 15-20 minute films.Project must fit GHFF's categories. We currently support films in the following categories with some examples:
+						</p>
+					</div>
 				</div>
+				<div class="row">
+					<div class="seven columns">
+						<p class="small">Maternal Health</p>
+						<p class="small">Child health/injuries (e.g congenital defects)</p>
+						<p class="small">Injuries</p>
+						<p class="small">Other essestial surgical conditions</p>
+						<p class="small">Emergency Care</p>
+						<p class="half strong vert-pad">
+							Projects must explore a discrete issue in any of the categories mentioned. We are particularly interested in projects that also display:
+						</p>
+						<p class="small">Creative and innovative storytelling</p>
+						<p class="small">Ongoing social issue</p>
+						<p class="small">Potential for engagement</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns vert-pad">
+						<p class="half strong">
+							We do not accept films advertising a charity, NGO, NPO, or any commercial product, whether implicit or explicit in the film. Submitted films should either be in English or include English subtitles.
+								If a film is selected for theater presentation at the festival it is the responsibility of the filmmaker to provide GHFF with either an HDCAM tape or a 35mm film exhibition copy by June 15, 2013.
+						</p>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
-	<script src="javascripts/jquery.js"></script>
-	<script src="javascripts/foundation.min.js"></script>
-	<script src="javascripts/app.js"></script>
-	</body>
-		</html>
+		<div class="footer row">
+			<div class="four columns">
+				<p class="strong">Locate Us:</p>
+				<p>
+					IGOT Global Health Film Festival
+					<br>
+					2550 23rd Street
+					<br>
+					Building 9, 2nd Floor
+					<br>San Francisco, CA 94110</p>
+			</div>
+			<div class="four columns">
+				<p class="strong">Show the love:</p>
+				<p>info@globalhealth.com</p>
+				<p>
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
+				</p>
+				<p>
+					<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
+				</p>
+				<p>
+					<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
+				</p>
+				<p>
+					<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
+				</p>
+
+			</div>
+			<div class="four columns">
+				<p class="strong">Social Streams:</p>
+				<p>
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
+				</p>
+				<p>
+					<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
+				</p>
+				<p>
+					<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
+				</p>
+			</div>
+		</div>
+
+		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/foundation.min.js"></script>
+		<script src="javascripts/app.js"></script>
+</body>
+	</html>
